Obtener porcentaje aplicado a una cotización existente para aplicarlo a una cotización actual

--- a/siereweb/nbproject/project.properties
+++ b/siereweb/nbproject/project.properties
@@ -97,6 +97,7 @@ platform.active=default_platform
 project.SIEREE-ejb=../SIEREE-ejb
 reference.SIEREE-ejb.dist=${project.SIEREE-ejb}/dist/SIEREE-ejb.jar
 resource.dir=setup
+rest.config.type=ide
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
