--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -21,108 +21,118 @@ libs.icefaces-icepush.classpath=\
     ${base}/icefaces-icepush/icepush.jar
 libs.icefaces-icepush.displayName=ICEpush (3.3.0)
 libs.Jasper.classpath=\
-    ${base}/Jasper/antlr-2.7.6.jar:\
-    ${base}/Jasper/asm-attrs.jar:\
-    ${base}/Jasper/asm.jar:\
-    ${base}/Jasper/barbecue-1.5-beta1.jar:\
-    ${base}/Jasper/barcode4j-2.1.jar:\
-    ${base}/Jasper/batik-anim.jar:\
-    ${base}/Jasper/batik-awt-util.jar:\
-    ${base}/Jasper/batik-bridge.jar:\
-    ${base}/Jasper/batik-css.jar:\
-    ${base}/Jasper/batik-dom.jar:\
-    ${base}/Jasper/batik-ext.jar:\
-    ${base}/Jasper/batik-gvt.jar:\
-    ${base}/Jasper/batik-parser.jar:\
-    ${base}/Jasper/batik-script.jar:\
-    ${base}/Jasper/batik-svg-dom.jar:\
-    ${base}/Jasper/batik-svggen.jar:\
-    ${base}/Jasper/batik-util.jar:\
-    ${base}/Jasper/batik-xml.jar:\
-    ${base}/Jasper/bcel-5.2.jar:\
-    ${base}/Jasper/bsh-2.1b5.jar:\
-    ${base}/Jasper/castor-1.2.jar:\
-    ${base}/Jasper/cglib-2.1.jar:\
-    ${base}/Jasper/cincom-jr-xmla.jar:\
-    ${base}/Jasper/commons-beanutils-1.8.2.jar:\
-    ${base}/Jasper/commons-collections-3.2.1.jar:\
-    ${base}/Jasper/commons-dbcp-1.2.2.jar:\
-    ${base}/Jasper/commons-digester-2.1.jar:\
-    ${base}/Jasper/commons-javaflow-20060411.jar:\
-    ${base}/Jasper/commons-math-1.0.jar:\
-    ${base}/Jasper/commons-pool-1.3.jar:\
-    ${base}/Jasper/commons-pool-1.6.jar:\
-    ${base}/Jasper/commons-vfs-1.0.jar:\
-    ${base}/Jasper/dom4j-1.6.jar:\
-    ${base}/Jasper/ehcache-1.1.jar:\
-    ${base}/Jasper/eigenbase-properties-1.1.0.10924.jar:\
-    ${base}/Jasper/eigenbase-resgen-1.3.0.11873.jar:\
-    ${base}/Jasper/eigenbase-xom-1.3.0.11999.jar:\
-    ${base}/Jasper/groovy-all-2.0.1.jar:\
-    ${base}/Jasper/hadoop-core-1.0.1.jar:\
-    ${base}/Jasper/hive-common-0.8.1.jar:\
-    ${base}/Jasper/hive-exec-0.8.1.jar:\
-    ${base}/Jasper/hive-jdbc-0.8.1.jar:\
-    ${base}/Jasper/hive-metastore-0.8.1.jar:\
-    ${base}/Jasper/hive-service-0.8.1.jar:\
-    ${base}/Jasper/hsqldb-1.8.0-10.jar:\
-    ${base}/Jasper/iText-2.1.7.js2.jar:\
-    ${base}/Jasper/iTextAsian.jar:\
-    ${base}/Jasper/jackson-annotations-2.0.5.jar:\
-    ${base}/Jasper/jackson-core-2.0.5.jar:\
-    ${base}/Jasper/jackson-databind-2.0.5.jar:\
-    ${base}/Jasper/jasperreports-5.1.0.jar:\
-    ${base}/Jasper/jasperreports-chart-themes-5.1.0.jar:\
-    ${base}/Jasper/jasperreports-core-renderer.jar:\
-    ${base}/Jasper/jasperreports-expressions-0.0.3.jar:\
-    ${base}/Jasper/jasperreports-exprfunctions-0.0.3.jar:\
-    ${base}/Jasper/jasperreports-extensions-3.5.3.jar:\
-    ${base}/Jasper/jasperreports-fonts-5.0.4.jar:\
-    ${base}/Jasper/jasperreports-htmlcomponent-4.7.1.jar:\
-    ${base}/Jasper/jasperreports-htmlcomponent-5.0.1.jar:\
-    ${base}/Jasper/jasperreports-json.jar:\
-    ${base}/Jasper/jasperreports-jtidy-r938.jar:\
-    ${base}/Jasper/javacup.jar:\
-    ${base}/Jasper/javassist-3.4.GA.jar:\
-    ${base}/Jasper/jaxen-1.1.1.jar:\
-    ${base}/Jasper/jcommon-1.0.15.jar:\
-    ${base}/Jasper/jdt-compiler-3.1.1.jar:\
-    ${base}/Jasper/jfreechart-1.0.12.jar:\
-    ${base}/Jasper/js-hive-datasource-1.0.4.jar:\
-    ${base}/Jasper/js-mongodb-datasource-1.0.0.jar:\
-    ${base}/Jasper/js_activation-1.1.jar:\
-    ${base}/Jasper/js_axis-1.4patched.jar:\
-    ${base}/Jasper/js_commons-codec-1.3.jar:\
-    ${base}/Jasper/js_commons-discovery-0.2.jar:\
-    ${base}/Jasper/js_commons-httpclient-3.1.jar:\
-    ${base}/Jasper/js_jasperserver-common-ws-4.7.1.jar:\
-    ${base}/Jasper/js_jaxrpc.jar:\
-    ${base}/Jasper/js_mail-1.4.jar:\
-    ${base}/Jasper/js_saaj-api-1.3.jar:\
-    ${base}/Jasper/js_wsdl4j-1.5.1.jar:\
-    ${base}/Jasper/jxl-2.6.10.jar:\
-    ${base}/Jasper/libfb303-0.7.0.jar:\
-    ${base}/Jasper/libthrift-0.9.0-snapshot.jar:\
-    ${base}/Jasper/log4j-1.2.15.jar:\
-    ${base}/Jasper/mondrian-3.2.0-13661-JS.jar:\
-    ${base}/Jasper/mongo-java-driver-2.7.3.jar:\
-    ${base}/Jasper/olap4j-0.9.7.309-JS.jar:\
-    ${base}/Jasper/png-encoder-1.5.jar:\
-    ${base}/Jasper/poi-3.7-20101029.jar:\
-    ${base}/Jasper/poi-ooxml-3.7-20101029.jar:\
-    ${base}/Jasper/poi-ooxml-schemas-3.7-20101029.jar:\
-    ${base}/Jasper/rex-0.8.1.jar:\
-    ${base}/Jasper/rex-20080421.jar:\
-    ${base}/Jasper/rhino-1.7R3.jar:\
-    ${base}/Jasper/saaj-api-1.3.jar:\
-    ${base}/Jasper/slf4j-api-1.5.8.jar:\
-    ${base}/Jasper/slf4j-log4j12-1.5.8.jar:\
-    ${base}/Jasper/spring.jar:\
-    ${base}/Jasper/sqleonardo-2009.03.rc1.jar:\
-    ${base}/Jasper/swingx-2007_10_07.jar:\
-    ${base}/Jasper/velocity-1.7-dep.jar:\
-    ${base}/Jasper/xbean.jar:\
-    ${base}/Jasper/xml-apis-ext.jar:\
+    ${base}/Jasper/ant-1.7.1.jar;\
+    ${base}/Jasper/antlr-2.7.6.jar;\
+    ${base}/Jasper/asm-attrs.jar;\
+    ${base}/Jasper/asm.jar;\
+    ${base}/Jasper/barbecue-1.5-beta1.jar;\
+    ${base}/Jasper/barcode4j-2.1.jar;\
+    ${base}/Jasper/batik-anim.jar;\
+    ${base}/Jasper/batik-awt-util.jar;\
+    ${base}/Jasper/batik-bridge.jar;\
+    ${base}/Jasper/batik-css.jar;\
+    ${base}/Jasper/batik-dom.jar;\
+    ${base}/Jasper/batik-ext.jar;\
+    ${base}/Jasper/batik-gvt.jar;\
+    ${base}/Jasper/batik-parser.jar;\
+    ${base}/Jasper/batik-script.jar;\
+    ${base}/Jasper/batik-svg-dom.jar;\
+    ${base}/Jasper/batik-svggen.jar;\
+    ${base}/Jasper/batik-transcoder.jar;\
+    ${base}/Jasper/batik-util.jar;\
+    ${base}/Jasper/batik-xml.jar;\
+    ${base}/Jasper/bcel-5.2.jar;\
+    ${base}/Jasper/bsh-2.1b5.jar;\
+    ${base}/Jasper/castor-1.2.jar;\
+    ${base}/Jasper/cglib-2.1.jar;\
+    ${base}/Jasper/cincom-jr-xmla.jar;\
+    ${base}/Jasper/commons-beanutils-1.8.2.jar;\
+    ${base}/Jasper/commons-collections-3.2.1.jar;\
+    ${base}/Jasper/commons-dbcp-1.2.2.jar;\
+    ${base}/Jasper/commons-digester-2.1.jar;\
+    ${base}/Jasper/commons-javaflow-20060411.jar;\
+    ${base}/Jasper/commons-logging-1.1.jar;\
+    ${base}/Jasper/commons-math-1.0.jar;\
+    ${base}/Jasper/commons-pool-1.3.jar;\
+    ${base}/Jasper/commons-pool-1.6.jar;\
+    ${base}/Jasper/commons-vfs-1.0.jar;\
+    ${base}/Jasper/dom4j-1.6.jar;\
+    ${base}/Jasper/ehcache-1.1.jar;\
+    ${base}/Jasper/eigenbase-properties-1.1.0.10924.jar;\
+    ${base}/Jasper/eigenbase-resgen-1.3.0.11873.jar;\
+    ${base}/Jasper/eigenbase-xom-1.3.0.11999.jar;\
+    ${base}/Jasper/ejb3-persistence.jar;\
+    ${base}/Jasper/groovy-all-2.0.1.jar;\
+    ${base}/Jasper/hadoop-core-1.0.1.jar;\
+    ${base}/Jasper/hibernate-annotations.jar;\
+    ${base}/Jasper/hibernate-commons-annotations.jar;\
+    ${base}/Jasper/hibernate3.jar;\
+    ${base}/Jasper/hive-common-0.8.1.jar;\
+    ${base}/Jasper/hive-exec-0.8.1.jar;\
+    ${base}/Jasper/hive-jdbc-0.8.1.jar;\
+    ${base}/Jasper/hive-metastore-0.8.1.jar;\
+    ${base}/Jasper/hive-service-0.8.1.jar;\
+    ${base}/Jasper/hsqldb-1.8.0-10.jar;\
+    ${base}/Jasper/iText-2.1.7.js2.jar;\
+    ${base}/Jasper/iTextAsian.jar;\
+    ${base}/Jasper/jackson-annotations-2.1.4.jar;\
+    ${base}/Jasper/jackson-core-2.1.4.jar;\
+    ${base}/Jasper/jackson-databind-2.1.4.jar;\
+    ${base}/Jasper/jasperreports-5.6.0.jar;\
+    ${base}/Jasper/jasperreports-chart-themes-5.6.0.jar;\
+    ${base}/Jasper/jasperreports-core-renderer.jar;\
+    ${base}/Jasper/jasperreports-extensions-3.5.3.jar;\
+    ${base}/Jasper/jasperreports-fonts-5.6.0.jar;\
+    ${base}/Jasper/jasperreports-functions-5.6.0.jar;\
+    ${base}/Jasper/jasperreports-htmlcomponent-4.7.1.jar;\
+    ${base}/Jasper/jasperreports-htmlcomponent-5.0.1.jar;\
+    ${base}/Jasper/jasperreports-json.jar;\
+    ${base}/Jasper/jasperreports-jtidy-r938.jar;\
+    ${base}/Jasper/javacup.jar;\
+    ${base}/Jasper/javassist-3.4.GA.jar;\
+    ${base}/Jasper/jaxen-1.1.1.jar;\
+    ${base}/Jasper/jcommon-1.0.15.jar;\
+    ${base}/Jasper/jdt-compiler-3.1.1.jar;\
+    ${base}/Jasper/jfreechart-1.0.12.jar;\
+    ${base}/Jasper/joda-time-2.1.jar;\
+    ${base}/Jasper/jpa.jar;\
+    ${base}/Jasper/js-hive-datasource-1.0.4.jar;\
+    ${base}/Jasper/js-mongodb-datasource-1.0.0a.jar;\
+    ${base}/Jasper/js_activation-1.1.jar;\
+    ${base}/Jasper/js_axis-1.4patched.jar;\
+    ${base}/Jasper/js_commons-codec-1.3.jar;\
+    ${base}/Jasper/js_commons-discovery-0.2.jar;\
+    ${base}/Jasper/js_commons-httpclient-3.1.jar;\
+    ${base}/Jasper/js_jasperserver-common-ws-4.7.1.jar;\
+    ${base}/Jasper/js_jaxrpc.jar;\
+    ${base}/Jasper/js_mail-1.4.jar;\
+    ${base}/Jasper/js_saaj-api-1.3.jar;\
+    ${base}/Jasper/js_wsdl4j-1.5.1.jar;\
+    ${base}/Jasper/jta.jar;\
+    ${base}/Jasper/jxl-2.6.10.jar;\
+    ${base}/Jasper/libfb303-0.7.0.jar;\
+    ${base}/Jasper/libthrift-0.9.0-snapshot.jar;\
+    ${base}/Jasper/log4j-1.2.15.jar;\
+    ${base}/Jasper/mondrian-3.2.0-13661-JS.jar;\
+    ${base}/Jasper/mongo-java-driver-2.7.3.jar;\
+    ${base}/Jasper/olap4j-0.9.7.309-JS.jar;\
+    ${base}/Jasper/png-encoder-1.5.jar;\
+    ${base}/Jasper/poi-3.7-20101029.jar;\
+    ${base}/Jasper/poi-ooxml-3.7-20101029.jar;\
+    ${base}/Jasper/poi-ooxml-schemas-3.7-20101029.jar;\
+    ${base}/Jasper/rex-0.8.1.jar;\
+    ${base}/Jasper/rex-20080421.jar;\
+    ${base}/Jasper/rhino-1.7R3.jar;\
+    ${base}/Jasper/saaj-api-1.3.jar;\
+    ${base}/Jasper/servlet-api-2.4.jar;\
+    ${base}/Jasper/slf4j-api-1.5.8.jar;\
+    ${base}/Jasper/slf4j-log4j12-1.5.8.jar;\
+    ${base}/Jasper/spring.jar;\
+    ${base}/Jasper/sqleonardo-2009.03.rc1.jar;\
+    ${base}/Jasper/swingx-2007_10_07.jar;\
+    ${base}/Jasper/velocity-1.7-dep.jar;\
+    ${base}/Jasper/xbean.jar;\
+    ${base}/Jasper/xml-apis-ext.jar;\
     ${base}/Jasper/xml-apis.jar
 libs.javaee-api-6.0.classpath=\
     ${base}/javaee-api-6.0/javaee-api-6.0.jar
