--- a/sieree-ejb/nbproject/project.properties
+++ b/sieree-ejb/nbproject/project.properties
@@ -63,7 +63,7 @@ javadoc.version=false
 javadoc.windowtitle=
 meta.inf=${source.root}/conf
 meta.inf.excludes=sun-cmp-mappings.xml
-platform.active=default_platform
+platform.active=JDK_1.7
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
