--- a/siereweb/nbproject/project.properties
+++ b/siereweb/nbproject/project.properties
@@ -93,7 +93,7 @@ javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
 persistence.xml.dir=${conf.dir}
-platform.active=default_platform
+platform.active=JDK_1.7
 project.SIEREE-ejb=../SIEREE-ejb
 reference.SIEREE-ejb.dist=${project.SIEREE-ejb}/dist/SIEREE-ejb.jar
 resource.dir=setup
